@@ -143,6 +143,33 @@ elif test x"$acx_blas_ok" = xyes; then
       ]]),[acx_blas_zdotu_fcall_ok=yes],
 	[acx_blas_zdotu_fcall_ok=no])
 	AC_MSG_RESULT([$acx_blas_zdotu_fcall_ok])
+# Check for correct integer size
+# FIXME: this may fail with things like -ftrapping-math.
+        AC_MSG_CHECKING([whether the integer size is correct])
+        AC_RUN_IFELSE(AC_LANG_PROGRAM(,[[
+      integer n,nn(3)
+      real s,a(1),b(1),sdot
+      a(1) = 1.0
+      b(1) = 1.0
+c Generate -2**33 + 1, if possible
+      n = 2
+      n = -4 * (n ** 30)
+      n = n + 1
+      if (n >= 0) goto 1
+c This means we're on 64-bit integers. Check whether the BLAS is, too.
+      s = sdot(n,a,1,b,1)
+      if (s .ne. 0.0) stop 1
+    1 continue
+c We may be on 32-bit integers, and the BLAS on 64 bits. This is almost bound
+c to have already failed, but just in case, we'll check.
+      nn(1) = -1
+      nn(2) = 1
+      nn(3) = -1
+      s = sdot(nn(2),a,1,b,1)
+      if (s .ne. 1.0) stop 1
+       ]]),[acx_blas_integer_size_ok=yes],
+	[acx_blas_integer_size_ok=no])
+	AC_MSG_RESULT([$acx_blas_integer_size_ok])
 
 	AC_LANG_POP(Fortran 77)
 
@@ -151,7 +178,8 @@ elif test x"$acx_blas_ok" = xyes; then
 		-a $acx_blas_sdot_fcall_ok = yes \
 		-a $acx_blas_ddot_fcall_ok = yes \
 		-a $acx_blas_cdotu_fcall_ok = yes \
-		-a $acx_blas_zdotu_fcall_ok = yes ; then
+		-a $acx_blas_zdotu_fcall_ok = yes \
+		-a $acx_blas_integer_size_ok = yes; then
 		acx_blas_f77_func_ok=yes;
 		$1
 	else
